--- a/views/jobs/index.ejs
+++ b/views/jobs/index.ejs
@@ -1,3 +1,18 @@
-<%- include('../partials/header.ejs') %>
-<%- include('../partials/footer.ejs') %>
 <%- include('../partials/navbar.ejs') %>
+<%- include('../partials/header.ejs') %>
+
+<h1>All Jobs Listings</h1>
+<% for(let jobData of allJobs){ %>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title"><%= jobData.postName %></h5>
+          <p class="card-text"><%= jobData.companyName %></p>
+          <p class="card-text"><%= jobData.ctc %></p>
+          <p class="card-text"><%= jobData.location %></p>
+          <p class="card-text"><%= jobData.positions %></p>
+          <a href="/jobs/edit/<%= jobData._id %>" class="btn btn-primary">Edit</a>
+          <a href="/jobs/delete/<%= jobData._id %>" class="btn btn-danger">Delete</a>
+        </div>
+    </div>
+<% } %>
+<%- include('../partials/footer.ejs') %>
