--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,14 @@
     margin: 5% 30%;
 }
 .cardPage{
-    display: flex;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin: 5% 10%;
+}
+
+.ccard{
+    width: 200px;
 }
