--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,25 +1,61 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/jobs">JOB-FAIR</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/jobs">All Jobs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/jobs/new">add new job</a>
-          </li>
-        </ul>
-        <form class="d-flex pt-2">
-          <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="/jobs">JOB-FAIR</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent"
+			aria-expanded="false"
+			aria-label="Toggle navigation"
+		>
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="/jobs"
+						>All Jobs</a
+					>
+				</li>
+				<% if(currentUser) {%>
+					<% if(currentUser.isAdmin){ %>
+						<li class="nav-item">
+							<a class="nav-link" href="/jobs/new">add new job</a>
+						</li>
+					<% } %>
+				<% } %>
+			</ul>
+			<form class="d-flex pt-2">
+				<!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button> -->
-          <a href="/login" class="btn btn-outline-primary me-3">Login</a>
-          <a href="/signup" class="btn btn-outline-secondary me-3">SignUp</a>
-          <a href="/logout" class="btn btn-outline-danger">Logout</a>
-        </form>
-      </div>
-    </div>
-  </nav>
+
+					<% if(currentUser) {%>
+						<a href="/logout" class="btn btn-outline-danger">Logout</a>
+					<% }	else{ %>
+						<a href="/login" class="btn btn-outline-primary me-3">Login</a>
+						<a href="/signup" class="btn btn-outline-secondary me-3">SignUp</a>
+					<% }%>
+			</form>
+		</div>
+	</div>
+</nav>
+
+
+
+<% if(success && success.length > 0) {%>
+
+	<div class="alert alert-success" role="alert">
+		<%= success %>
+	</div>
+
+<% } %>
+
+<% if( error && error.length > 0 ){ %>
+
+	<div class="alert alert-danger" role="alert">
+		<%= error %>
+	</div>
+
+<% } %>
